--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/WEB-INF/templates/layout.xhtml"
+<ui:composition template="/WEB-INF/templates/general-layout.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -14,81 +14,73 @@
 
     <ui:define name="content">
 
-        <h3>
-            forgot-password.xhtml - Forgot password page:
-        </h3>
+        <div class="forms-wrapper">
 
-        <!--<h:outputText value="#{param['code']}"/>-->
+            <p:growl id="growl" showDetail="false" life="15000" errorClass="error-messages" infoClass="info-messages"/>
 
-        <p:growl id="growl" showDetail="false" life="15000" errorClass="error-messages" infoClass="info-messages"/>
+            <!-- the form for the use case when user is not logged and want to reset you password -->
+            <h:form id="resetPasswordForm" rendered="#{empty param['code']}">
 
-        <!-- the form for the use case when user is not logged and want to reset you password -->
-        <h:form id="resetPasswordForm" rendered="#{empty param['code']}">
+                <p:panel id="resetPasswordPanel" header="Reset Password" style="">
 
-            <p:panel id="resetPasswordPanel" header="Reset Password" style="">
+                    <h:panelGrid styleClass="order-table reservainfo">
 
-                <h:panelGrid styleClass="order-table reservainfo">
+                        <p:outputLabel for="usEmail" value="Email:"/>
+                        <p:inputText id="usEmail" value="#{forgotPasswordBacking.user.email}"
+                                     required="true" type="email"
+                                     requiredMessage="Error: enter your email"/>
 
-                    <p:outputLabel for="usEmail" value="Email:"/>
-                    <p:inputText id="usEmail" value="#{forgotPasswordBacking.user.email}"
-                                 required="true" type="email"
-                                 requiredMessage="Error: enter your email"/>
+                        <p:commandButton action="#{forgotPasswordBacking.sendRequestResetPassword}"
+                                         styleClass="login-submit navi padding-margin"
+                                         value="Send"
+                                         update="resetPasswordPanel growl">
 
-                    <p:commandButton action="#{forgotPasswordBacking.sendRequestResetPassword}"
-                                     styleClass="login-submit navi padding-margin"
-                                     value="Send"
-                                     update="resetPasswordPanel growl">
+                            <p:resetInput target="resetPasswordPanel"/>
 
-                        <p:resetInput target="resetPasswordPanel"/>
+                        </p:commandButton>
 
-                    </p:commandButton>
+                    </h:panelGrid>
+                </p:panel>
+            </h:form>
 
-                </h:panelGrid>
-            </p:panel>
-        </h:form>
+            <!-- the form for use case when user passed by reset.password link and will set a new password -->
+            <h:form id="setNewPasswordForm" rendered="#{not empty param['code']}">
 
-        <!-- the form for use case when user passed by reset.password link and will set a new password -->
-        <h:form id="setNewPasswordForm" rendered="#{not empty param['code']}">
+                <p:panel id="setNewPasswordPanel" header="Set New Password" style="">
 
-            <p:panel id="setNewPasswordPanel" header="Set New Password" style="">
+                    <h:panelGrid styleClass="order-table reservainfo">
 
-                <h:panelGrid styleClass="order-table reservainfo">
+                        <p:outputLabel for="newPassword" value="New password:"/>
+                        <p:password id="newPassword" value="#{forgotPasswordBacking.password}"
+                                    required="true"
+                                    match="confirmNewPassword" feedback="true">
+                            <f:validateLength minimum="6"/>
+                        </p:password>
 
-                    <p:outputLabel for="newPassword" value="New password:"/>
-                    <p:password id="newPassword" value="#{forgotPasswordBacking.password}"
-                                required="true"
-                                match="confirmNewPassword" feedback="true">
-                        <f:validateLength minimum="6"/>
-                    </p:password>
+                        <p:outputLabel for="confirmNewPassword" value="Repeated password:"/>
+                        <p:password id="confirmNewPassword" value="#{forgotPasswordBacking.password}"
+                                    required="true">
+                            <f:validateLength minimum="6"/>
+                        </p:password>
 
-                    <p:outputLabel for="confirmNewPassword" value="Repeated password:"/>
-                    <p:password id="confirmNewPassword" value="#{forgotPasswordBacking.password}"
-                                required="true">
-                        <f:validateLength minimum="6"/>
-                    </p:password>
+                        <p:commandButton action="#{forgotPasswordBacking.sendSaveNewPassword(code)}"
+                                         styleClass="login-submit navi padding-margin"
+                                         value="Submit"
+                                         update="setNewPasswordPanel growl">
 
-                    <p:commandButton action="#{forgotPasswordBacking.sendSaveNewPassword(code)}"
-                                     styleClass="login-submit navi padding-margin"
-                                     value="Submit"
-                                     update="setNewPasswordPanel growl">
+                        </p:commandButton>
 
-                    </p:commandButton>
+                    </h:panelGrid>
+                </p:panel>
+            </h:form>
 
-                </h:panelGrid>
-            </p:panel>
-        </h:form>
+            <h:outputText value="Do you remember you password?"/>
 
-        <!--<p:spacer height="10"/>-->
-        <!--<p:separator/>-->
+            <p>
+                <h:link outcome="login" value="Login"/>
+            </p>
 
-        <h:outputText value="Do you remember you password?"/>
-
-        <p>
-            <p:link
-                    styleClass="login-submit navi padding-margin"
-                    outcome="login"
-                    value="Login"/>
-        </p>
+        </div>
 
     </ui:define>
 
